@@ -1,5 +1,10 @@
 2006-01-11  Atsushi Enomoto <atsushi@ximian.com>
 
+	* Iterator.cs : Nowadays removal of cloning of the argument list
+	  in ListIterator is safe. Thanks to Joshua Tauberer for the hint.
+
+2006-01-11  Atsushi Enomoto <atsushi@ximian.com>
+
 	* Iterator.cs : (DescendantOrSelfIterator/DescendantIterator) the
 	  error message is for blaming custom XPathNavigator
 	  implementation, not us ;-) (see also #77194)
